# Musician-Eval-System

./: .gitignore  LICENSE  README.md  VERIFICATION_REPORT.md  docker-compose.yml  get-pip.py
.claude/: settings.local.json
.github/: codeql.yml
.github/workflows/: ci.yml  codeql.yml  security.yml
backend/: .env.example  RBAC_IMPLEMENTATION.md  bootstrap.py  init_db.sql  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/app/ai/: __init__.py
backend/app/api/v1/: __init__.py  auth.py  evaluations.py  health.py  performances.py  users.py
backend/app/core/: config.py  database.py  dependencies.py  exceptions.py  init_db.py  security.py
backend/app/models/: evaluation.py  user.py
backend/app/schemas/: __init__.py  auth.py  evaluation.py  health.py
backend/app/services/: auth.py
backend/tests/: conftest.py
backend/tests/integration/: __init__.py
backend/tests/security/: __init__.py
backend/tests/unit/: test_auth.py  test_health.py
frontend/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  playwright.config.ts
frontend/src/: App.tsx
frontend/src/api/: axios.ts
frontend/src/components/: ProtectedRoute.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: AdminPanel.tsx  Dashboard.tsx  Evaluations.tsx  Login.tsx  Profile.tsx  Register.tsx
frontend/tests/ui/: smoke.spec.ts
